Fixed overlapping in HUD

--- a/client/src/app/race/hud/rpm-bar/rpm-bar.component.css
+++ b/client/src/app/race/hud/rpm-bar/rpm-bar.component.css
@@ -23,7 +23,7 @@
     background-color: rgba(128, 128, 128, 0.5);
     border: solid black;
     margin-left:1%;
-    margin-right: 5%;
+    margin-right: 0%;
 
 }
 #speed{
